tests/e2e/pass/v17_tail_expr_return.ep
# EXIT: 0
fun add(a: i64, b: i64): i64 {
    let sum = a + b
    sum
}

fun unit_tail(): void {
    let xs = new i64[]
    xs.push(1)
}

fun run(): i64 {
    unit_tail()
    add(20, 22) - 42
}

fun main(): void {
    exit(run())
}
