tests/e2e/fail/is_null_never.ep
# COMPILE_ERROR: is_null expects a reference, got never
fun main(): void {
    let result = is_null(exit(1))
}
